fixed spacing on google form

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
-  <title>About Us</title>
+  <title>About</title>
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -18,7 +18,7 @@
       <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Full-service studio</p>
       <p class="f5-ns f6 mw6 center lh-copy">From attractive illlustrations and technical drawings, to detailed animation and interactive experiences, we can produce visuals appropriate for every situation.</p>
       <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Effective Communication</p>
-      <p class="f5-ns f6 mw6 center lh-copy">We work closely with scientists, educators, and science media to ensure the science is communicated accurately and effectively. The message is delivered in a way that best engages and inspires each audience.</p>
+      <p class="f5-ns f6 mw6 center lh-copy">We work closely with scientists, educators, and science media to ensure the science is communicated accurately and effectively. The message is presented in a way that best engages and inspires each audience.</p>
     </div>
   </section>
   <section class="w-100 mt0 pb5 center mt5-ns mt4 pl3-m pr4-m">
