--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -29,12 +29,9 @@
       padding-right: 16rem;
     }
   }
-  @media screen and (max-width: 660px) {
-    .iframe-form {
-      margin-top: -2rem !important;
-      height: 900px;
+  .iframe-form {
+      margin-top: 3rem !important;
     }
-  }
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white">
@@ -133,7 +130,7 @@
       <noscript><p class="f4-ns f5 mt4-ns center mb0 measure pl4 pr4 lh-copy mb6-ns mb5">Email <a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">sean@inform.studio</a> with a brief description of your project.</p></noscript>
     </div>
     <div class="center w-100 dn hidden">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" style="margin-top: -7rem;" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
   </section>
   <footer>
