spacing tweak to banner

--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
         font-size: 4rem;
       }
     }
+    @media screen and (min-width: 30em) and (max-width: 39em) {
+      .hero {
+        left: -160px;
+      }
+    }
     @media screen and (min-width: 30em) {
       html {
         font-size: 13px;
@@ -160,7 +165,7 @@
       <div class="hero bg-white shadow-3 ba b--moon-gray dn db-ns"></div>
       <div class="w-100 pb4-ns pb2 pl4-ns pl3 pl2-l pr4-ns pr3 relative">
         <div class="mw7-ns mw6 w-100 relative pr4-l pr6-m">
-          <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a science illustration and animation studio.</p>
+          <p class="f1-l f2-m f3 pt4-ns pt2 mb3 dark-gray relative"><b class="inform">Inform</b> is a science illustration <br class="db-l dn">and animation studio.</p>
           <p class="f3-l f4-m f5 mw7 pr6-ns mr3 mt5-ns mt4 lh-copy">From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.</p>
         </div>
       </div>
