updating contact form

--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,8 @@
     .card-shadow {
       box-shadow: 0 1px 1px 0 rgba(60,64,67,.08), 0 1px 3px 1px rgba(60,64,67,.16)
     }
-    @media screen and (max-width: 660px) {
-      .iframe-form {
-        margin-top: -2rem !important;
-        height: 900px;
-      }
+    .iframe-form {
+      margin-top: 3rem !important;
     }
   </style>
 </head>
@@ -57,7 +54,7 @@
       <p class="mw6 f4-ns f5 center mb0 lh-copy mt4">You can also tell us about your project using the form below:</p>
     </div>
     <div class="center w-100">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" style="margin-top: -8rem;" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
   </section>
   <footer>
