--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <div class="mw6 w-100 pa4-ns pa3 center card-shadow dt ba b--gray">
           <div class="w-40-ns w-40 dtc v-top tc">
             <div class="pr4-ns pl0-m pa0 mt2 fr-ns">
-              <img src="images/headshots/sean.jpg" class="br-100 w4-ns w3 dib ba b--moon-gray pa1" alt="avatar">
+              <img src="images/headshots/headshot-thumb.jpg" class="br-100 w4-ns w3 dib ba b--moon-gray pa1" alt="avatar">
             </div>
           </div>
           <p class="f4-ns f5 mw6 center lh-copy dtc v-mid">Sean Kelley <br><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">sean@inform.studio</a></p>
