--- a/data-visualization.html
+++ b/data-visualization.html
@@ -21,7 +21,7 @@
   </section>
   <footer>
     <div class="bt b--moon-gray center">
-      <p class="tc f7 gray mt2 mb1">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb1">© 2018-19 Inform Studio</p>
     </div>
   </footer>
 </body>
