--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   </div>
   <div class="center b--moon-gray pb2 bt">
     <div class="center mw6-l">
-      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb0">© 2018-19 Inform Studio</p>
     </div>
   </div>
 </body>
