--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
   </section>
   <footer>
     <div class="bt b--moon-gray center mt0">
-      <p class="tc f7 gray mt2 mb2">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb2">© 2018-19 Inform Studio</p>
     </div>
   </footer>
   <script>
