--- a/index-testimonial.html
+++ b/index-testimonial.html
@@ -355,7 +355,7 @@
   </div>
   <div class="center b--moon-gray pb2 bt">
     <div class="center mw6-l">
-      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb0">© 2018-19 Inform Studio</p>
     </div>
   </div>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
