--- a/test-site/index.html
+++ b/test-site/index.html
@@ -115,7 +115,7 @@
     </div>
   </header>
     <div class="pt1">
-      <p class="f2 center mw6 font-light ibm dn-ns mb0 pb2 mt5 pt4">Scientific Illustration and Animation</p>
+      <p class="f2 center font-light ibm dn-ns mb0 pb2 mt5 pt4">Scientific Illustration and Animation</p>
         <div class="w-100 mw8 hero o-90 dn db-ns"><img src="title.svg" class=""></div>
         <div class="cn w-100 pb4 pb0-ns">
           <article class="pa3-l pl5-l w-50-ns w-100 fr-ns dib-ns v-mid side-text">
