--- a/test-site/contact.html
+++ b/test-site/contact.html
@@ -100,9 +100,9 @@
   <section class="w-100 mt0 mb4-ns mb3 pt4 mt4">
     <div class="mw8 w-100 center pl4-ns pr4-ns">
       <p class="tc-ns f2-ns f3 pt4-ns pt2 dark-gray font-light">Questions or project inquiries?</p>
-      <div class="mw6 center">
-        <p class="f4-ns f5 mw6 center mt4-ns mt3 lh-copy mb4">I would love to hear from you! The best way to contact me is through email:</p>
-        <div class="mw6 w-100 pa4-ns pa3 center card-shadow dt ba b--moon-gray br3 bg-white">
+      <div class="mw6-ns center">
+        <p class="f4-ns f5 mt4-ns mt3 lh-copy mb4">I would love to hear from you! The best way to contact me is through email:</p>
+        <div class="mw6-ns w-100 pa4-ns pa3 center card-shadow dt ba b--moon-gray br3 bg-white">
           <div class="w-40-ns w-40 dtc v-top tc">
             <div class="pr4-ns pl0-m pa0 mt2 fr-ns">
               <img src="images/headshots/sean-square.jpg" class="br-100 w4-ns w3 dib ba b--dark-gray" alt="avatar">
@@ -115,7 +115,7 @@
   </section>
   <section class="w-100 overflow-hidden dn hidden">
     <div class="w-100 center z-max relative pl4-ns pr4-ns">
-      <p class="mw6 f4-ns f5 center mb0 lh-copy mt4">You can also tell me about your project using the form below:</p>
+      <p class="mw6-ns f4-ns f5 center mb0 lh-copy mt4">You can also tell me about your project using the form below:</p>
     </div>
     <div class="center w-100">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
