updating test site

--- a/test-site/contact.html
+++ b/test-site/contact.html
@@ -80,16 +80,23 @@
     .iframe-form {
       margin-top: 3rem !important;
     }
+    .nav {
+    max-width: 28rem;
+    }
   </style>
 </head>
 <body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
-  <header class="">
+  <header class="ml3">
     <div class="tc tl-l fl-l w-100-m">
     <a href="index.html" class="no-underline">
-    <span class="dib mw4-ns mw3 mt1 mt0-ns o-60 logo"><img src="images/icons/eye-blue.svg" class="w-100 shrink"></span>
-      <p class="f2-ns f3 dib ma2 title ibm black-70 v-top pt2">Inform Studio</p></a></div>
-    <div class="w-100 mw6 tc center fr-l pr4-ns pr0-m">
-      <div class="w-100 dt mw6 pl5-l pl0 fr">
+      <span class="dib mw4-ns mw3 mt1 mt0-ns o-60 logo">
+        <img src="images/icons/eye-blue.svg" class="w-100 shrink">
+      </span>
+      <p class="f2-ns f3 dib ma2 title ibm black-70 v-top pt2">Inform Studio</p>
+    </a>
+    </div>
+    <div class="w-100 nav tc center fr-l pr0-ns pr0-m">
+      <div class="w-100 dt fr">
         <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-70 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
         <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
