--- a/test-site/about.html
+++ b/test-site/about.html
@@ -63,16 +63,23 @@
   .hit {
     font-size: 1.75rem;
   }
+  .nav {
+    max-width: 28rem;
+  }
   </style>
 </head>
 <body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
-  <header class="">
+  <header class="ml3">
     <div class="tc tl-l fl-l w-100-m">
     <a href="index.html" class="no-underline">
-    <span class="dib mw4-ns mw3 mt1 mt0-ns o-60 logo"><img src="images/icons/eye-blue.svg" class="w-100 shrink"></span>
-      <p class="f2-ns f3 dib ma2 title ibm black-70 v-top pt2">Inform Studio</p></a></div>
-    <div class="w-100 mw6 tc center fr-l pr4-ns pr0-m">
-      <div class="w-100 dt mw6 pl5-l pl0 fr">
+      <span class="dib mw4-ns mw3 mt1 mt0-ns o-60 logo">
+        <img src="images/icons/eye-blue.svg" class="w-100 shrink">
+      </span>
+      <p class="f2-ns f3 dib ma2 title ibm black-70 v-top pt2">Inform Studio</p>
+    </a>
+    </div>
+    <div class="w-100 nav tc center fr-l pr0-ns pr0-m">
+      <div class="w-100 dt fr">
         <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-70 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
         <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
@@ -81,7 +88,7 @@
     </div>
   </header>
   <article class="ph5-l pt5 mt4-l mt3 tc tl-ns">
-      <img src="images/headshots/sean-square.jpg" class="w-100 mw5 pa4 pb0-l pb2 pl0 pt2 pt4-ns fl-ns br-100">
+      <img src="images/headshots/sean-square.jpg" class="w-100 mw4 mw5-ns pb0-l pb2 pl0 pr0 pr4-ns pt2 pt4-ns fl-ns br-100">
     <p class="measure f4 f3-ns lh-copy mt0 mt4-ns tc tl-ns">
       Hi! I'm Sean Kelley.
     </p>
