--- a/test-site/contact.html
+++ b/test-site/contact.html
@@ -80,13 +80,24 @@
     .iframe-form {
       margin-top: 3rem !important;
     }
+  @media screen and (max-width: 36em) {
+    .nav {
+      margin-top: -0.6rem;
+      margin-bottom: -1rem;
+    }
+    .contact {
+      font-size: 1.8rem;
+    }
+  }
+  @media screen and (min-width: 55.1em) {
     .nav {
     max-width: 28rem;
     }
+  }
   </style>
 </head>
 <body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
-  <header class="ml3">
+  <header class="ml3-l">
     <div class="tc tl-l fl-l w-100-m">
     <a href="index.html" class="no-underline">
       <span class="dib mw4-ns mw3 mt1 mt0-ns o-60 logo">
@@ -95,7 +106,7 @@
       <p class="f2-ns f3 dib ma2 title ibm black-70 v-top pt2">Inform Studio</p>
     </a>
     </div>
-    <div class="w-100 nav tc center fr-l pr0-ns pr0-m">
+    <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
       <div class="w-100 dt fr">
         <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-70 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
         <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square.svg"></a>
