updating test site

--- a/test-site/contact.html
+++ b/test-site/contact.html
@@ -141,7 +141,7 @@
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMqp5yoeMPsQOMsZVPsg2sv_l3OO5tgbyEy6tS5gcRvyWXKA/viewform?embedded=true" class="w-100 center tc relative z-1 db iframe-form" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
   </section>
-  <footer class="center pr5-l pb3-ns pb2 mw7">
+  <footer class="center pr5-l pb3 mw7">
       <div class="dtc tc-ns mw5 fr tr">
           <div class="f7">
             <p class="ma0">Inform Studio © 2018-19</p>
