--- a/test-site/about.html
+++ b/test-site/about.html
@@ -7,77 +7,8 @@
   <meta name="description" content="">
   <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
-  <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet"> <style>
-    .ibm { font-family: 'IBM Plex Sans', sans-serif; font-weight: 400}
-    .font-light { font-weight: 300 !important;}
-    footer {line-height: 1rem;}
-    .bg-light-gray {background-color: #fafafa}
-    .tag-line {
-      margin-top: -0.7rem;
-    }
-    .title {
-  }
-  .hero {
-    margin-top: 10.3rem;
-    margin-bottom: -10rem;
-    font-size: 3.15rem;
-    font-weight: 600;
-    padding: 0 2.8rem;
-  }
-    .shrink{
-        -webkit-transform:scale(0.8);
-        -moz-transform:scale(0.8);
-        -ms-transform:scale(0.8);
-        transform:scale(0.8);
-      }
-    .cn {
-      display: flex;
-      justify-content: center;
-      align-items: center; 
-    }
-  .logo {
-    margin-top: .6rem;
-    z-index: -1;
-    margin-left: -1.6rem;
-    width: 5rem;
-  }
-  .blue-text {
-    color: #2485D6;
-  }
-  .blue-color {
-    color: #008AFF;
-  }
-  a {
-    color: #2485D6;
-  }
-  .b-blue-dashed {
-    border-style: dashed;
-    border-color: rgba(0, 162, 255, 0.5);
-    border-width: 1px;
-  }
-  .micro {
-    z-index: -1;
-    padding-right: 3rem;
-  }
-  .hit {
-    font-size: 1.75rem;
-  }
-   @media screen and (max-width: 36em) {
-    .nav {
-      margin-top: -0.6rem;
-      margin-bottom: -1rem;
-    }
-    .contact {
-      font-size: 1.8rem;
-    }
-  }
-  @media screen and (min-width: 55.1em) {
-    .nav {
-    max-width: 28rem;
-    }
-  }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
 </head>
 <body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
   <header class="ml3-l">
