--- a/test-site/index.html
+++ b/test-site/index.html
@@ -7,107 +7,9 @@
   <meta name="description" content="">
   <link rel="icon" type="image/x-icon" href="images/icons/favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet"> 
-  <style>
-  .ibm { font-family: 'IBM Plex Sans', sans-serif; font-weight: 400}
-  .font-light { font-weight: 300 !important;}
-  footer {line-height: 1rem;}
-  .bg-light-gray {background-color: #fafafa}
-  .tag-line {
-    margin-top: -0.7rem;
-  }
-  .hero {
-    margin-top: 10.3rem;
-    margin-bottom: -10rem;
-    font-size: 3.15rem;
-    font-weight: 600;
-    padding: 0 2.8rem;
-  }
-  @media screen and (min-width: 55.1em) {
-      .hit {
-    font-size: 1.75rem;
-    }
-    .nav {
-    max-width: 28rem;
-  }
-  }
-  @media screen and (min-width: 42em) and (max-width: 55.1em) {
-    .hero {
-      margin-top: 8.6rem;
-      margin-bottom: -10rem;
-      padding: 0 0rem;
-    }
-    .micro {
-      margin-left: -0.5rem !important;
-    }
-  }
-  @media screen and (min-width: 36em) and (max-width: 42em) {
-    .side-text {
-      margin-top: 4rem;
-    }
-    .micro {
-      margin-left: 0.5rem !important;
-    }
-    .hero {
-      margin-top: 7rem;
-      margin-bottom: -6rem;
-      padding: 0 0rem;
-    }
-  }
-  @media screen and (max-width: 36em) {
-    .hero {
-      margin-top: 6rem;
-      margin-bottom: -6rem;
-      padding: 0 0rem;
-    }
-    .nav {
-      margin-top: -0.6rem;
-      margin-bottom: -1rem;
-    }
-    .contact {
-      font-size: 1.8rem;
-    }
-  }
-  .shrink{
-      -webkit-transform:scale(0.8);
-      -moz-transform:scale(0.8);
-      -ms-transform:scale(0.8);
-      transform:scale(0.8);
-    }
-  .cn {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-  }
-  .logo {
-    margin-top: .6rem;
-    z-index: -1;
-    margin-left: -1.6rem;
-    width: 5rem;
-  }
-  .blue-text {
-    color: #2485D6;
-  }
-  .blue-color {
-    color: #008AFF;
-  }
-  .b-blue-dashed {
-    border-style: dashed;
-    border-color: rgba(0, 162, 255, 0.5);
-    border-width: 1px;
-  }
-  .micro {
-    z-index: -1;
-    margin-left: -3rem;
-  }
-  .micro-container {
-        padding-bottom:79%;
-        height:0;
-        position:relative;
-        overflow: hidden;
-        z-index: -1;
-      }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
 </head>
 <body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
   <header class="ml3-l">
