--- a/test-site/index.html
+++ b/test-site/index.html
@@ -73,21 +73,20 @@
   </style>
 </head>
 <body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
-  <header class="ml3-l">
+  <header class="ml2-l">
     <div class="tc tl-l fl-l w-100-m">
     <a href="index.html" class="no-underline">
-      <span class="dib mw4-ns mw3 mt1 mt0-ns o-60 logo">
-        <img src="images/icons/eye-blue.svg" class="w-100 shrink">
+      <span class="dib o-90 new-logo">
+        <img src="test-logo.svg" class="w-100 shrink">
       </span>
-      <p class="f2-ns f3 dib ma2 title ibm black-70 v-top pt2">Inform Studio</p>
     </a>
     </div>
     <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
       <div class="w-100 dt fr">
-        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-70 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
-        <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon.svg"></a>
-        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter.svg"></a>
+        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
+        <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square-blue.svg"></a>
+        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon-blue.svg"></a>
+        <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter-blue.svg"></a>
       </div>
     </div>
   </header>
@@ -130,7 +129,7 @@
       <p class="tc-ns mt5-ns mt2 mb0 f1-l f2-m f3 ibm font-light contact">Want to work together?</p>
       <p class="f3-l f4 tc-ns pb4"><a class="no-underline dark-gray bb" href="contact.html">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     </section>
-  <footer class="pr5-ns pl5-ns pb4-ns pb3">
+  <footer class="pr5-l pl5-ns pb4-ns pb3">
       <div class="dtc mw5 fr tr mt3-ns">
           <div class="f7">
             <p class="ma0">Inform Studio © 2018-19</p>
