--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     font-weight: 600;
     padding: 0 2.8rem;
   }
+  .behind {
+        z-index: -1;
+  }
   .micro {
-    z-index: -1;
     margin-left: -3rem;
   }
   .micro-container {
@@ -106,10 +108,14 @@
             </p>
           </article>
           <div class="micro-container w-50-ns mw8-ns w-100 dn db-ns">
+            <img src="images/microscope-arrows-white_animated.svg" class="micro absolute o-30">
+            <img src="images/microscope-lines-white_animated.svg" class="micro absolute o-30">
+             <img src="images/microscope-lines-blue_animated.svg" class="micro absolute o-90">
+            <img src="images/microscope-arrows-blue_animated.svg" class="micro absolute o-90">
             <img src="images/microscope@1x.png"
                    srcset="images/microscope@1x.png 1x, images/microscope@2x.png 2x"
                    alt="Microscope."
-                   class="micro w-100">
+                   class="micro w-100 behind">
           </div>
       </div>
     </div>
