added svg animation

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
             </p>
           </article>
           <div class="micro-container w-50-ns mw8-ns w-100 dn db-ns">
-            <img src="images/microscope-arrows-white_animated.svg" class="micro absolute o-30">
-            <img src="images/microscope-lines-white_animated.svg" class="micro absolute o-30">
-             <img src="images/microscope-lines-blue_animated.svg" class="micro absolute o-90">
-            <img src="images/microscope-arrows-blue_animated.svg" class="micro absolute o-90">
+            <img src="images/microscope-arrows-white_animated.svg" class="micro absolute o-50 w-100">
+            <img src="images/microscope-lines-white_animated.svg" class="micro absolute o-50 w-100">
+             <img src="images/microscope-lines-blue_animated.svg" class="micro absolute w-100">
+            <img src="images/microscope-arrows-blue_animated.svg" class="micro absolute w-100">
             <img src="images/microscope@1x.png"
                    srcset="images/microscope@1x.png 1x, images/microscope@2x.png 2x"
                    alt="Microscope."
