font style and weight adjustments

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500" rel="stylesheet">
 </head>
-<body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
+<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
   <header class="ml2-l">
     <div class="tc tl-l fl-l w-100-m">
     <a href="index.html" class="no-underline">
@@ -21,7 +21,7 @@
     </div>
     <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
       <div class="w-100 dt fr">
-        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
+        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0 ibm">About</p></a>
         <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square-blue.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon-blue.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter-blue.svg"></a>
@@ -30,22 +30,22 @@
   </header>
   <article class="ph5-l pt5 mt4-l mt3 tc tl-ns">
       <img src="images/headshots/sean-square.jpg" class="w-100 mw4 mw5-ns pb0-l pb2 pl0 pr0 pr4-ns pt2 pt4-ns fl-ns br-100">
-    <p class="measure f4 f3-ns lh-copy mt0 mt4-ns tc tl-ns">
+    <p class="measure f4 f3-ns lh-copy mt0 mt4-ns tc tl-ns ibm">
       Hi! I'm Sean Kelley.
     </p>
-    <p class=" f5 f4-ns lh-copy tl">
+    <p class=" f5 f4-ns lh-copy tl fw3">
       I started Inform Studio to help scientists and science communicators share their work more effectively. I believe that beautiful and accurate depictions of scientific research are one of the best ways to inform and inspire others.
     </p>
-    <p class="f5 f4-ns lh-copy tl">
+    <p class="f5 f4-ns lh-copy tl fw3">
       I originally studied to be a physicist, but while in school I fell in love with 3D modeling and animation. Now, science illustration combines both worlds!
     </p>
-    <p class="f5 f4-ns lh-copy tl">
+    <p class="f5 f4-ns lh-copy tl fw3">
       Aside from my work, I enjoy surfing, learning new musical instruments, and traveling (currently in Buenos Aires, Argentina).
     </p>
   </article>
   <article class="ph5-l pt4 pb4 pb0-ns">
-    <h3 class="f6 ttu tracked mt0">About the site</h3>
-    <p class="measure f5 f4-ns lh-copy">
+    <h3 class="f6 ttu tracked mt0 ibm font-heavy">About the site</h3>
+    <p class="measure f5 f4-ns lh-copy fw3">
       Credit's owed where credit's due! Some tools that have made my life easier:
     </p>
     <li class="f5">CSS – <a href="https://tachyons.io/" class="blue-text">Tachyons</a></li>
@@ -55,7 +55,7 @@
   <footer class="pr5-l pl5-ns pb4">
       <div class="dtc mw5 fr tr mt3">
           <div class="f7">
-            <p class="ma0">Inform Studio © 2018-19</p>
+            <p class="ma0 ibm">Inform Studio © 2018-19</p>
           </div>
         </div>
   </footer>
