--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   }
   </style>
 </head>
-<body class="ibm w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
+<body class="sans-serif w-100 center black-80 f6 bg-light-gray relative pa4-ns pa2 pt2 pt4-l mw8">
   <header class="ml2-l">
     <div class="tc tl-l fl-l w-100-m">
     <a href="index.html" class="no-underline">
@@ -88,7 +88,7 @@
     </div>
     <div class="w-100 nav tc center fr-l pr0-ns pr0-m mw6">
       <div class="w-100 dt fr">
-        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0">About</p></a>
+        <a class="f6 link dim ph2-ns ph1 pv3 mb2 black-80 v-mid w-20 tc dtc shrink ibm" href="about.html"><p class="f3 ma0 ibm">About</p></a>
         <a class="f6 link dim ph2-ns ph1 pv2 mb2 v-mid w-20 dtc shrink" href="contact.html"><img class="w3 v-mid o-80" src="images/icons/mail-square-blue.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://www.instagram.com/inform.science.studio/"><img class="w2 w1 v-mid o-80" src="images/icons/instagram_simple_icon-blue.svg"></a>
         <a class="f6 link dim ph2-ns ph1 pv2-ns pv1 mb2 v-mid w-20 dtc shrink" href="https://twitter.com/inform_studio"><img class="w2 v-mid o-80" src="images/icons/twitter-blue.svg"></a>
@@ -100,10 +100,10 @@
         <div class="w-100 mw8 hero o-90 dn db-ns"><img src="images/title.svg" class=""></div>
         <div class="cn w-100 pb4 pb0-ns">
           <article class="pa3-l pl5-l w-50-ns w-100 fr-ns dib-ns v-mid side-text">
-            <p class="measure f4 f3-ns lh-copy hit">
+            <p class="ibm measure f4 f3-ns lh-copy hit">
               Sometimes words fall short.
             </p>
-            <p class="measure f5 f4-ns lh-copy">
+            <p class="measure f5 f4-ns lh-copy fw3">
               From technical illustrations to detailed animations, we translate complex scientific phenomena into clear visual form.
             </p>
           </article>
@@ -118,28 +118,28 @@
       </div>
     </div>
   <div class="w-100 pr5-l pl5-l mw8">
-    <h3 class="f6 ttu tracked mt0">Recent Work</h3>
+    <h3 class="f6 ttu tracked mt0 ibm font-heavy">Recent Work</h3>
   <!-- LightWidget WIDGET -->
     <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
     <iframe src="//lightwidget.com/widgets/bc1ccc672f7c58ed8a04432cc0fee75f.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-    <h3 class="mt0 tr"><a href="https://www.instagram.com/inform.science.studio/" class="blue-text no-underline f6 ttu tracked">See more →</a></h3>
+    <h3 class="mt1 tr"><a href="https://www.instagram.com/inform.science.studio/" class="blue-text no-underline f6 ibm font-heavy ttu tracked">See more →</a></h3>
   </div>
   <section class="w-100 pb4">
     <div class="mw8 w-100 center">
       <div class="w-100 mw8 pr5-l pl5-l center pt4">
-        <h3 class="f6 ttu tracked mt0">Demo Reel</h3>
+        <h3 class="f6 ibm font-heavy ttu tracked mt0">Demo Reel</h3>
         <div style="padding:56.25% 0 0 0;position:relative;" class=""><iframe src="https://player.vimeo.com/video/271547528?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
       </div>
     </div>
   </section>
   <section class="pt1 mt0-ns mt3 w-100 grid-l center pb1">
       <p class="tc-ns mt5-ns mt2 mb0 f1-l f2-m f3 ibm font-light contact">Want to work together?</p>
-      <p class="f3-l f4 tc-ns pb4 contact-line"><a class="no-underline dark-gray bb" href="contact.html">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+      <p class="f3-l f4 tc-ns pb4 contact-line fw3"><a class="no-underline dark-gray bb" href="contact.html">Get in touch<span><img src="images/icons/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
     </section>
   <footer class="pr5-l pl5-ns pb4-ns pb3">
       <div class="dtc mw5 fr tr mt3-ns">
           <div class="f7">
-            <p class="ma0">Inform Studio © 2018-19</p>
+            <p class="ma0 ibm">Inform Studio © 2018-19</p>
           </div>
         </div>
   </footer>
