smaller logo size

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </div>
   </header>
-    <div class="pt1">
+    <div class="pt1 top">
       <p class="f2 center font-light ibm dn-ns mb0 pb2 mt5 pt4">Scientific Illustration and Animation</p>
         <div class="w-100 mw8 hero o-90 dn db-ns"><img src="images/title.svg" class=""></div>
         <div class="cn w-100 pb4 pb0-ns">
